--- a/Templates/admin_anti_hack.html
+++ b/Templates/admin_anti_hack.html
@@ -1,9 +1,14 @@
+<style type="text/css">
+#container{ width:90%;}
+select{width:auto}
+</style>
 <h2><TMPL_VAR lang_anti_hack></h2>
 
 <br>
 Top Stats for last 48 hours
 <br><br>
-
+<div class="table_border">
+<div class="tableFlow">
 <Table class="tbl1" cellpadding=3 cellspacing=1>
 <TR class="hdr"><TD colspan=3>Top money generated IPs</TD></TR>
 <TR class="hdr">
@@ -19,9 +24,11 @@ Top Stats for last 48 hours
 </TR>
 </TMPL_LOOP>
 </Table>
-
+</div>
+</div>
 <br>
-
+<div class="table_border">
+<div class="tableFlow">
 <Table class="tbl1" cellpadding=3 cellspacing=1>
 <TR class="hdr"><TD colspan=3>Top money generated Users</TD></TR>
 <TR class="hdr">
@@ -37,9 +44,11 @@ Top Stats for last 48 hours
 </TR>
 </TMPL_LOOP>
 </Table>
-
+</div>
+</div>
 <br>
-
+<div class="table_border">
+<div class="tableFlow">
 <Table class="tbl1" cellpadding=3 cellspacing=1>
 <TR class="hdr"><TD colspan=3>Top money received Users</TD></TR>
 <TR class="hdr">
@@ -55,3 +64,7 @@ Top Stats for last 48 hours
 </TR>
 </TMPL_LOOP>
 </Table>
+</div>
+</div>
+<br /><br />
+<br /><br />
