--- a/Templates/admin_downloads.html
+++ b/Templates/admin_downloads.html
@@ -1,5 +1,8 @@
+<style type="text/css">
+#container{ width:90%;}
+select{width:auto}
+</style>
 <h2><TMPL_VAR lang_last_downloads></h2>
-
 <Form>
 <input type="hidden" name="op" value="admin_downloads">
 Downloader login: <input type="text" name="usr_login" value="<TMPL_VAR usr_login>" size=16><br>
@@ -8,8 +11,19 @@ Downloader IP: <input type="text" name="ip" value="<TMPL_VAR ip>" size=15><br>
 </Form>
 <br>
 
+
+<div class="table_border">
+<div class="tableFlow">
 <Table class="tbl1" cellpadding=3 cellspacing=1>
-<TR class="hdr"><TD>Date</TD><TD><TMPL_VAR lang_file_name></TD><TD>Money</TD><TD>User</TD><TD>IP</TD><TMPL_IF m_n_100_complete><TD>Finished</TD></TMPL_IF><TD>Referer</TD><TD>Status</TD</TR>
+<TR class="hdr">
+	<TD>Date</TD>
+	<TD><TMPL_VAR lang_file_name></TD>
+	<TD>Money</TD>
+	<TD>User</TD>
+	<TD>IP</TD>
+	<TMPL_IF m_n_100_complete><TD>Finished</TD></TMPL_IF>
+	<TD>Referer</TD>
+	<TD>Status</TD></TR>
 <TMPL_LOOP list>
 <TR align=center>
     <TD><TMPL_VAR created></TD>
@@ -26,4 +40,7 @@ Downloader IP: <input type="text" name="ip" value="<TMPL_VAR ip>" size=15><br>
 </TR>
 </TMPL_LOOP>
 </Table>
+</div>
+</div>
 <TMPL_VAR paging>
+<br /><br /><br /><br />
