--- a/Templates/admin_payments_history.html
+++ b/Templates/admin_payments_history.html
@@ -1,5 +1,10 @@
+<style type="text/css">
+#container{ width:90%;}
+select{width:auto}
+</style>
 <TMPL_VAR paging>
-
+<div class="table_border">
+<div class="tableFlow">
 <table class="tbl1" cellpadding="2" cellspacing="1" style="width: 800px">
 <tr class="hdr">
     <td>Username</td>
@@ -22,5 +27,7 @@
 </tr>
 </TMPL_LOOP>
 </table>
-
+</div>
+</div>
 <TMPL_VAR paging>
+<br /><br />
