--- a/Templates/admin_report_view.html
+++ b/Templates/admin_report_view.html
@@ -1,3 +1,9 @@
+<style type="text/css">
+#container{ width:90%;}
+select{width:auto}
+</style>
+<div class="table_border">
+<div class="tableFlow">
 <table style="width: 600px">
     <tr class="hdr">
         <td colspan="2"><TMPL_VAR filename></td>
@@ -23,3 +29,6 @@
 	    <td><TMPL_VAR info></td>
     </tr>
 </table>
+</div>
+</div>
+<br /><br />
