--- a/Templates/admin_stats_charts.html
+++ b/Templates/admin_stats_charts.html
@@ -1,3 +1,7 @@
+<style type="text/css">
+#container{ width:90%;}
+select{width:auto}
+</style>
 <center id="charts"></center>
 
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -43,3 +47,4 @@ function drawCharts() {
   });
 }
 </script>
+<br /><br /><br /><br />
