--- a/Templates/admin_stats_details.html
+++ b/Templates/admin_stats_details.html
@@ -1,3 +1,9 @@
+<style type="text/css">
+#container{ width:90%!important;}
+select{width:auto}
+</style>
+<div class="table_border">
+<div class="tableFlow">
 <table class="tbl1" style="width: 80%">
 <tr class="hdr">
    <td>Day</td>
@@ -29,3 +35,6 @@
    <td align="center">$<TMPL_VAR sum_paid_to_users></td>
 </tr>
 </table>
+</div>
+</div>
+<br /><br /><br /><br />
