--- a/Templates/admin_stats_sites.html
+++ b/Templates/admin_stats_sites.html
@@ -1,3 +1,9 @@
+<style type="text/css">
+#container{ width:90%;}
+select{width:auto}
+</style>
+<div class="table_border">
+<div class="tableFlow">
 <table class="tbl1" style="width: 80%">
 	<tr class="hdr">
 		<td colspan="5">Webmaster earnings</td>
@@ -17,3 +23,6 @@
 	</tr>
 </TMPL_LOOP>
 </table>
+</div>
+</div>
+<br /><br />
