--- a/Templates/admin_users_add.html
+++ b/Templates/admin_users_add.html
@@ -1,3 +1,7 @@
+<style type="text/css">
+#container{ width:90%;}
+select{width:auto}
+</style>
 <h2>Add new users</h2>
 <TMPL_IF result>
 <b>Created users:</b><br>
@@ -17,3 +21,4 @@ One user per line<br>
 <Textarea name="list" cols=28 rows=16><TMPL_VAR list></Textarea>
 <br><input type="submit" name="create" value="Create users above">
 </Form>
+<br /><br /><br /><br />
