--- a/Templates/download0_alt.html
+++ b/Templates/download0_alt.html
@@ -1,3 +1,6 @@
+   <TMPL_IF my_login>
+   		<link rel="stylesheet" type="text/css" href="<TMPL_VAR site_url>/css/dashboard-menu.css"/>
+   </TMPL_IF>
 <br>
 <Form method="POST" action=''>
 	<input type="hidden" name="op" value="download1">
@@ -16,3 +19,4 @@
 </TMPL_IF>
 
 </div>
+<br /><br /><br /><br />
