--- a/Templates/links.html
+++ b/Templates/links.html
@@ -10,3 +10,14 @@
 <TMPL_INCLUDE text-link-ads.html>
 
 </div>
+<TMPL_IF my_login>
+	<link rel="stylesheet" type="text/css" href="<TMPL_VAR site_url>/css/dashboard-menu.css"/>
+</TMPL_IF>
+<style type="text/css">
+.SidemenuPanel ul.otherMenus li.activefaq{background:#363636; border-left:2px solid #131313; cursor:pointer}
+.SidemenuPanel ul.otherMenus li.activefaq i{color:#fff;}
+.SidemenuPanel{padding-bottom:20px;}
+</style>
+<style type="text/css">
+footer{-webkit-margin-before:-50px;}
+</style>
