--- a/Templates/Pages/english/faq.html
+++ b/Templates/Pages/english/faq.html
@@ -1,4 +1,15 @@
-<div style="text-align:left;width:720px;">
+<TMPL_IF my_login>
+	<link rel="stylesheet" type="text/css" href="<TMPL_VAR site_url>/css/dashboard-menu.css"/>
+	<style type="text/css">
+	@media (min-width: 1025px){
+	.holderPanel{background:#444;}
+	</style>
+</TMPL_IF>
+<style type="text/css">
+.SidemenuPanel ul.otherMenus li.activefaq{background:#363636; border-left:2px solid #131313; cursor:pointer}
+.SidemenuPanel ul.otherMenus li.activefaq i{color:#fff;}
+</style>
+<div class="InnerHolder">
 <h2>FAQ</h2>
 <ul>
 <li><b>What is <TMPL_VAR site_name>?</b><br><br>
@@ -40,3 +51,4 @@ If you still have questions regarding our services don't hesitate to contact us 
 </center>
 
 </div>
+<br><br><br><br>
