--- a/Templates/admin_mass_email.html
+++ b/Templates/admin_mass_email.html
@@ -1,4 +1,10 @@
+<style type="text/css">
+#container{ width:90%;}
+select{width:auto}
+</style>
 <h2>Send mass e-mail to users</h2>
+<div class="table_border-small">
+<div class="overflow">
 <Form method="POST" onSubmit="saveEditorContent('msg_text');">
 <input type="hidden" name="op" value="admin_mass_email">
 <input type="hidden" name="token" value="<TMPL_VAR token_mass_email>">
@@ -35,8 +41,6 @@ Logged in last <input type="text" id="filter_lastlogin" name="filter_lastlogin" 
 </TMPL_LOOP>
 <input type="submit" name="send" value=" Send e-mails ">
 </Form>
-<br><br>
-
 <script>
 function status_changed(element)
 {
@@ -45,7 +49,9 @@ function status_changed(element)
 </script>
 
 <TMPL_INCLUDE nic_edit.html>
-
+</div>
+</div>
 <script>
 nicedit.panelInstance('msg_text');
 </script>
+<br /><br /><br /><br />
