--- a/Templates/admin_sites.html
+++ b/Templates/admin_sites.html
@@ -1,5 +1,11 @@
+<style type="text/css">
+#container{ width:90%;}
+select{width:auto}
+</style>
 <h2>Approved sites</h2>
 <br>
+<div class="table_border">
+<div class="tableFlow">
 <table class="tbl1" width="720">
 <tr class="hdr">
 	<td align="center">User</td>
@@ -7,7 +13,6 @@
 	<td align="center">Created</td>
 	<td></td>
 </tr>
-<TMPL_IF list>
 <TMPL_LOOP list>
 	<tr>
 		<td align="center"><a href="<TMPL_VAR site_url>/?op=admin_user_edit&usr_id=<TMPL_VAR usr_id>"><TMPL_VAR usr_login></a></td>
@@ -20,11 +25,9 @@
 		</td>
 	</tr>
 </TMPL_LOOP>
-<TMPL_ELSE>
-   <tr>
-      <td colspan="4" align="center">No approved sites yet</td>
-   </tr>
-</TMPL_IF>
 </table>
+</div>
+</div>
 <br><br>
 <TMPL_VAR paging>
+<br /><br />
