--- a/Templates/admin_stats_payments.html
+++ b/Templates/admin_stats_payments.html
@@ -1,3 +1,9 @@
+<style type="text/css">
+#container{ width:90%;}
+select{width:auto}
+</style>
+<div class="table_border">
+<div class="tableFlow">
 <table class="tbl1" style="width: 80%">
 <tr class="hdr">
    <td>Plugin</td>
@@ -10,3 +16,6 @@
 </tr>
 </TMPL_LOOP>
 </table>
+</div>
+</div>
+<br /><br />
