--- a/Templates/files.html
+++ b/Templates/files.html
@@ -1,10 +1,10 @@
 					<!-- Start Header -->
 					<tr>
 						<th><input type="checkbox" name="file_id" class="selall" value="0"></th>
-						<th><TMPL_VAR s_file_name><TMPL_VAR lang_fname_descr><TMPL_VAR s2_file_name></th>
+						<th style="text-align:left;"><TMPL_VAR s_file_name><TMPL_VAR lang_fname_descr><TMPL_VAR s2_file_name></th>
 						<th><TMPL_VAR s_file_size><TMPL_VAR lang_file_size><TMPL_VAR s2_file_size></th>
 						<th><TMPL_VAR s_file_created><TMPL_VAR lang_file_upload><TMPL_VAR s2_file_created></th>
-						<TMPL_IF allow_vip_files><th><TMPL_VAR s_file_price>Price<TMPL_VAR s2_file_price></th></TMPL_IF>
+                  <TMPL_IF allow_vip_files><th><TMPL_VAR s_file_price>Price<TMPL_VAR s2_file_price></th></TMPL_IF>
 						<th><TMPL_VAR s_file_downloads><img src="<TMPL_VAR site_url>/images/icon_th_download.png"><TMPL_VAR s_file_downloads></th>
 						<th><img src="<TMPL_VAR site_url>/images/icon_th_comments.png"></th>
 						<th class="diamond"><img src="<TMPL_VAR site_url>/images/icon_th_premium.png"></th>
@@ -24,7 +24,7 @@
 						<TMPL_IF trashed_at>
 						<td colspan="4"><TMPL_VAR time_left> left</td>
 						<TMPL_ELSE>
-						<TMPL_IF allow_vip_files><td class="tdinfo"><TMPL_IF file_vip><TMPL_VAR currency_symbol><TMPL_VAR file_price><TMPL_ELSE>-</TMPL_IF></td></TMPL_IF>
+                  <TMPL_IF allow_vip_files><td class="tdinfo"><TMPL_IF file_vip><TMPL_VAR currency_symbol><TMPL_VAR file_price><TMPL_ELSE>-</TMPL_IF></td></TMPL_IF>
 						<td class="tdinfo"><TMPL_VAR file_downloads></td>
 						<td class="tdinfo"><TMPL_VAR file_comments></td>
 						<td class="icontd"><input type="checkbox" name="file_premium_only"<TMPL_IF file_premium_only> checked</TMPL_IF> onClick="setFileFlag([<TMPL_VAR file_id>], 'file_premium_only', this.checked);"></td>
@@ -33,8 +33,8 @@
 						<TMPL_IF trashed_at>
 						<td colspan="2"><a href="<TMPL_VAR site_url>/?op=my_files&untrash_selected=1&file_id=<TMPL_VAR file_id>&token=<TMPL_VAR token>"><img src="<TMPL_VAR site_url>/images/icon_untrash.png" name="untrash" alt="Untrash"></a></td>
 						<TMPL_ELSE>
-						<td class="icontd"><a href="?op=file_edit&amp;file_code=<TMPL_VAR file_code>"><img src="<TMPL_VAR site_url>/images/icon_edit.png"></a></td>
-						<td class="icontd"><a href="?op=my_files&amp;del_code=<TMPL_VAR file_code>&token=<TMPL_VAR token>" onClick="return Dialogs.confirm('<TMPL_VAR lang_delete_file>', this);"><img src="<TMPL_VAR site_url>/images/icon_delete.png"></a></td>
+						<td class="icontd"><a href="?op=file_edit&amp;file_code=<TMPL_VAR file_code>" name="edit"><img src="<TMPL_VAR site_url>/images/ico_edit.png"></a></td>
+						<td class="icontd"><a href="?op=my_files&amp;del_code=<TMPL_VAR file_code>&token=<TMPL_VAR token>" name="delete" onClick="return Dialogs.confirm('<TMPL_VAR lang_delete_file>', this);"><img src="<TMPL_VAR site_url>/images/ico_delete.png"></a></td>
 						</TMPL_IF>
 					</tr>
 					</TMPL_LOOP>
@@ -43,11 +43,11 @@
 					</TMPL_IF>
 					<!-- End Files -->
 					
-					<tr class="tablesep" colspan="10"></tr><!--spacer -->
+					<tr class="tablesep" colspan="11"></tr><!--spacer -->
 					
 					<TMPL_IF trash>
 					<tr class="actionpanel">
-						<th colspan="10" style="text-align: left">
+						<th colspan="11" style="text-align: left">
 							<input type="submit" name="untrash_selected" value="Untrash selected">
 						</th>
 					</tr>
@@ -55,9 +55,9 @@
 					<!-- Start Copy/Move Panel -->
 					<tr class="actionpanel">
 						<td colspan="11">
-							<label for="to_folder"><TMPL_VAR lang_select_folder></label>
-							<select name="to_folder">
-								<option>--</option>
+							<!--<label for="to_folder"></label>-->
+							<select name="to_folder" class="AcctSelect">
+								<option>- <TMPL_VAR lang_select_folder> -</option>
 								<option value="0"> / </option>
 								<TMPL_LOOP folders_tree>
 								<option value="<TMPL_VAR fld_id>"><TMPL_VAR pre><TMPL_VAR fld_name></option>
@@ -67,26 +67,27 @@
 							<div class="copymove">
 								<input name="to_folder_copy" value="<TMPL_VAR lang_copy_files>" type="submit">
 								<input name="to_folder_move" value="<TMPL_VAR lang_move_files>" type="submit">
+								<input name="zip" value="Zip selected" type="submit">
+								<input id="export" value="Export..." type="button">
 							</div>
 							
 						</td>
 					</tr>
 					<!-- End Copy/Move Panel -->
 					
-					<tr class="tablesep" colspan="10"></tr><!--spacer -->
+					<tr class="tablesep" colspan="11"></tr><!--spacer -->
 					
 					<!-- Start Action Buttons -->
 					<tr class="actionpanel">
-						<td colspan="11" style="max-width: 640px; white-space: normal">
-							<input name="del_selected" value="<TMPL_VAR lang_delete_selected>" type="submit" onClick="return confirm('<TMPL_VAR lang_delete_confirm>')">
-							<input name="set_file_public" value="<TMPL_VAR lang_publish>" type="button" class="flag">
-							<input name="unset_file_public" value="<TMPL_VAR lang_unpublish>" type="button" class="flag">
-							<input name="set_file_premium_only" value="Set premium only" type="button" class="flag">
-							<input name="unset_file_premium_only" value="Unset premium only" type="button" class="flag">
-							<input name="zip" value="Zip selected" type="submit">
-							<input id="export" value="Export..." type="button">
+						<td colspan="11" style="max-width: 640px; white-space: normal; padding-left:1.5%;">
+							<input name="del_selected" value="<TMPL_VAR lang_delete_selected>" type="submit" onClick="return confirm('<TMPL_VAR lang_delete_confirm>')" style="background:#cb0303;">
+							<input name="set_file_public" value="<TMPL_VAR lang_publish>" type="button" class="flag" style="background:#4d9202;">
+							<input name="unset_file_public" value="<TMPL_VAR lang_unpublish>" type="button" class="flag" style="background:#858585;">
+							<input name="set_file_premium_only" value="Set premium only" type="button" class="flag" style="background:#4d9202;">
+							<input name="unset_file_premium_only" value="Unset premium only" type="button" class="flag" style="background:#858585;">
 						</td>
 					</tr>
+					<tr class="tablesep" colspan="11"></tr><!--spacer -->
 					<!-- End Action Buttons -->
 					</TMPL_IF>
 				
@@ -130,22 +131,23 @@
 						console.log(postdata);
 						loadDialog("Export...", '?op=my_files_export&fld_id=<TMPL_VAR current_fld_id>', postdata)
 					});
-				   function loadDialog(title, url, postdata)
-				   {
-				   	var dialog = $("<div>");
-				   	$(dialog).attr('title', title);
-				   
-				   	$.ajax({ url: url,
-				   		method: postdata ? 'POST' : 'GET',
-				   		success: function(res)
-				   		{
-				   			var w = $(window).width();
-				   			var h = $(window).height();
-				   
-				   			$(dialog).html(res);
-				   			$(dialog).dialog({ modal: true, width: 'auto', height: 'auto' })
-				   		},
-				   		data: postdata
-				   	});
-				   }
+					function loadDialog(title, url, postdata)
+					{
+						  var dialog = $("<div>");
+						  $(dialog).attr('title', title);
+					
+						  $.ajax({ url: url,
+									 method: postdata ? 'POST' : 'GET',
+									 success: function(res)
+									 {
+												var w = $(window).width();
+												var h = $(window).height();
+					
+												$(dialog).html(res);
+												$(dialog).dialog({ modal: true, width: 'auto', height: 'auto' })
+									 },
+									 data: postdata
+						  });
+					}
+
 					</script>
