--- a/Templates/folders.html
+++ b/Templates/folders.html
@@ -1,11 +1,11 @@
 					<!-- Start Folder Navigation -->
 					<tr class="curfolder">
 						<td class="foldername" colspan="5"><TMPL_VAR current_folder><a href="#" id="publish_link">
-						<img src="<TMPL_VAR site_url>/images/icon_publink.png"><TMPL_VAR lang_publish_link></a></td>
+						<TMPL_VAR lang_publish_link></a></td>
 					</tr>
 					<!-- End Folder Navigation -->
 					
-					<tr class="tablesep" colspan="5"></tr><!--spacer -->
+					<!--<tr class="tablesep" colspan="5"></tr>--><!--spacer -->
 					
 					<!--Start Folders -->
 					<TMPL_IF folders>
@@ -18,8 +18,8 @@
 						<TMPL_IF trash>
 						<td class="icontd" colspan="2"></td>
 						<TMPL_ELSE>
-						<td class="icontd"><a href="?op=fld_edit&amp;fld_id=<TMPL_VAR fld_id>"><img src="<TMPL_VAR site_url>/images/icon_edit.png"></a></td>
-						<td class="icontd"><a href="?op=my_files&amp;fld_id=<TMPL_VAR folder_id>&amp;del_folder=<TMPL_VAR fld_id>&amp;token=<TMPL_VAR token>" onClick="return Dialogs.confirm('<TMPL_VAR lang_delete_folder>', this);"><img src="<TMPL_VAR site_url>/images/icon_delete.png"></a></td>
+						<td class="icontd"><a href="?op=fld_edit&amp;fld_id=<TMPL_VAR fld_id>"><img src="<TMPL_VAR site_url>/images/ico_edit.png"></a></td>
+						<td class="icontd"><a href="?op=my_files&amp;fld_id=<TMPL_VAR folder_id>&amp;del_folder=<TMPL_VAR fld_id>&amp;token=<TMPL_VAR token>" name="delete" onClick="return Dialogs.confirm('<TMPL_VAR lang_delete_folder>', this);"><img src="<TMPL_VAR site_url>/images/ico_delete.png"></a></td>
 						</TMPL_IF>
 					</tr>
 					<TMPL_ELSE>
@@ -37,17 +37,6 @@
 					</tr>
 					</TMPL_IF>
 					<!--End Folders -->
-					<tr class="tablesep" colspan="5"></tr><!--spacer -->
-					<!-- Start Create Folder -->
-					<TMPL_UNLESS trash>
-					<tr>
-						<th colspan="5">
-						<input type="text" size="18" name="create_new_folder" class="input1">
-						<input value="" class="f-btn-green" name="create_folder_submit" type="submit">
-						</th>
-					</tr>
-					</TMPL_UNLESS>
-					<!-- End Create Folder -->
 
 					<script src="<TMPL_VAR site_url>/js/selall.js"></script>
 					<script>
