--- a/Templates/forgot_pass.html
+++ b/Templates/forgot_pass.html
@@ -8,8 +8,8 @@
 <input type="hidden" name="token" value="<TMPL_VAR token>">
 <input type="hidden" name="rand" value="<TMPL_VAR rand>">
 <b><TMPL_VAR lang_enter_login_email>:</b><br><input type="text" name="usr_login" value="<TMPL_VAR usr_login>"><br>
+<TMPL_IF ihtml><br><br><center><TMPL_VAR ihtml></center></TMPL_IF><br>
 <TMPL_IF msg><font class="err"><TMPL_VAR msg></font><br><br></TMPL_IF><input type="submit" name="submit" value=" Reset my password ">
-<TMPL_IF ihtml><br><br><center><TMPL_VAR ihtml></center></TMPL_IF>
 
 </Form>
 </div>
