--- a/Templates/my_reports_refs.html
+++ b/Templates/my_reports_refs.html
@@ -5,6 +5,7 @@
    <td>User</td>
    <td>Amount</td>
 </tr>
+<TMPL_IF list>
 <TMPL_LOOP list>
 <tr>
    <td align="center"><TMPL_VAR created></td>
@@ -12,4 +13,9 @@
    <td align="center">$<TMPL_VAR amount></td>
 </tr>
 </TMPL_LOOP>
+<TMPL_ELSE>
+<tr>
+   <td colspan="7" align="center">No referals found for selected date</td>
+</tr>
+</TMPL_IF>
 </table>
