--- a/Templates/my_reports_sales.html
+++ b/Templates/my_reports_sales.html
@@ -19,6 +19,7 @@
 </TMPL_LOOP>
 <TMPL_ELSE>
 <tr>
-   <td colspan="5" align="center">No records found</td>
+   <td colspan="7" align="center">No sales found for selected date</td>
+</tr>
 </TMPL_IF>
 </table>
