--- a/Templates/splash.html
+++ b/Templates/splash.html
@@ -1,71 +1,33 @@
-	<div id="content" style="width: 980px">
+	<div id="content">
 		<div class="container" style="position: relative;top: 50%; transform: translateY(15%)">
-				<div class="prompic" style="">
-					<a href="<TMPL_VAR site_url>/?op=upload_form">
-						<div class="col">
-							<div class="pheader">
-								<span><img src="<TMPL_VAR site_url>/images/icon_upload_blue.png"></span>
-								<span>Upload Files</span>
-							<div class="clear">
-							</div>
-							</div>
-							<b><TMPL_VAR site_name></b> is a file hosting provider. We offer online storage/remote backup capacity, sophisticated uploading and downloading tools. 
-						</div>
-				</a>
-				</div>	
-			<div class="splashbar promsign">
-				<a href="<TMPL_VAR site_url>/register.html">
-					<div class="col">
-						<div class="pheader">
-							<span><img src="<TMPL_VAR site_url>/images/icon_sup_blue.png"></span>
-							<span>SignUp</span>
-						<div class="clear">
-						</div>
-						</div>
-						Whenever you need to send a file that is too large for e-mail, <b><TMPL_VAR site_name></b> can help. If you need secure remote storage capacity for off-site backups, <b><TMPL_VAR site_name></b> offers solutions for you.
-					</div>
-				</a>
-			</div>
-			<div class="splashbar promprofit">
-				<a href="<TMPL_VAR site_url>/register.html">
-					<div class="col">
-						<div class="pheader">
-							<span><img src="<TMPL_VAR site_url>/images/icon_profit_blue.png"></span>
-							<span>Take Profit</span>
-						<div class="clear">
-						</div>
-						</div>
-						With <b><TMPL_VAR site_name></b> you can earn money by promoting your files on the external resources. Just register and enjoy being a part of one or more of our affiliate programs!
-					</div>
-				</a>
-			</div>
-				<div class="clear"></div>
-						
+			<div class="prompic" style="">
+				<a href="<TMPL_VAR site_url>/?op=upload_form">&nbsp;</a>
+			</div>	
+			<div class="clear"></div>						
 		</div> 
 	</div>
-
-   <TMPL_IF demo_mode>
-   <br><br><br>
-   <a href="https://play.google.com/store/apps/details?id=net.sibsoft.xfsuploader" target="_new"><img src="/images/android.png" height="61"></a>
-   <a href="/desktop_file_manager_mac.zip" target="_new"><img src="/images/mac_os.png" height="61"></a>
-   <a href="/desktop_file_manager_win.zip" target="_new"><img src="/images/windows.png" height="61"></a>
-   </TMPL_IF>
-
-    <script>
-    $('body').addClass('blues');
-    </script>
+	<TMPL_IF demo_mode>
+	<div class="col-12 lft splashHldr">
+		<a href="https://play.google.com/store/apps/details?id=net.sibsoft.xfsuploader" target="_new"><img src="/images/android.png" height="61"></a>
+		<a href="/desktop_file_manager_mac.zip" target="_new"><img src="/images/mac_os.png" height="61"></a>
+		<a href="/desktop_file_manager_win.zip" target="_new"><img src="/images/windows.png" height="61"></a>
+	</div>
+	</TMPL_IF>
+	
     <style>
-    body {
-        overflow:hidden;
-    }
-    footer {
-        position: fixed;
-        bottom: 0;
-    }
-	.splashbar a, .splashbar a:hover {
-		color: #e0effa;
+    body{background-image:url(../images/bg.png); -webkit-background-size:cover; -moz-background-size:cover; -o-background-size:cover; background-size:cover;}
+	#header{background:none!important; border:0px!important;}
+	footer{background:none; border:0px;position:absolute;bottom:0px;}
+	footer .container1{display:none;}
+	#mainmenu ul li a{color:#fff;}
+	.copyright{display:block;}
+	.prompic{margin: 50px auto 30px;}
+	
+	@media (min-width: 320px) and (max-width: 480px) {
+	#container{margin:0px auto;}
+	.prompic{margin: 10px auto 10px;}
 	}
-	.prompic a, .prompic a:hover {
-		color: #6b899d;
+	@media (min-width: 600px) and (max-width: 800px) {
+	#container{margin:0px auto;}
 	}
     </style>
